fix: align frame and fix faq description

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -72,6 +72,9 @@
 @media screen and (max-width: 510px) {
 	.frame {
 		margin: 2rem 1rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 
 	.about-text p {
